// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-hRFsLf doJHGo"
  color="bulma.100"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-hRFsLf doJHGo"
    color="bulma.100"
  >
    Defaul color is Bulma
  </span>
  <span
    className="sc-hRFsLf csZVJp"
    color="piccolo.100"
  >
    Piccolo
  </span>
  <span
    className="sc-hRFsLf zNcIT"
    color="trunks.100"
  >
    Trunks
  </span>
  <span
    className="sc-hRFsLf kyacXt"
    color="krillin.100"
  >
    Krillin
  </span>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-hRFsLf doJHGo"
    color="bulma.100"
  >
    Span is a default tag
  </span>
  <p
    className="sc-hRFsLf doJHGo"
    color="bulma.100"
  >
    Paragraph tag
  </p>
  <label
    className="sc-hRFsLf doJHGo"
    color="bulma.100"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <span
    className="sc-hRFsLf doJHGo"
    color="bulma.100"
  >
    Text-align is not specified
  </span>
  <span
    className="sc-hRFsLf eMhCij"
    color="bulma.100"
  >
    Centered text
  </span>
  <span
    className="sc-hRFsLf erFgPU"
    color="bulma.100"
  >
    Right alignment
  </span>
</div>
`;
